fixed spacing

--- a/css/smirk-gg.webflow.css
+++ b/css/smirk-gg.webflow.css
@@ -122,7 +122,7 @@
 
   .body-text {
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
     font-size: 16px;
     line-height: 20px;
   }
